Standardizing buildings, unity, civilian, research, special and SR

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1207,7 +1207,8 @@ tec_jump_empty:0 "\n\n"
  job_tec_scavenger:0 "Scavenger"
  job_tec_scavenger_plural:0 "Scavengers"
  job_tec_scavenger_desc:0 "Trained to live and thrive in any condition, scavengers dedicate their lives to search and take back to their base any usable material or good found around; what some call trash, they call it treasure."
- job_tec_scavenger_effect_desc:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
+ job_tec_scavenger_effect_desc:0 "[job_tec_scavenger_effect_desc]"
+ job_tec_scavenger_effect_desc_default: "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
  job_tec_scavenger_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £energy£ §YEnergy§! deposits and packets of £volatile_motes£ §YVolatile Motes§! around."
  job_tec_scavenger_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £food£ §YFood§! deposits and packets of £exotic_gases£ §YExotic Gases§! around."
  job_tec_scavenger_effect_desc_cold:0 "£job_tec_scavenger£ $job_tec_scavenger_plural$ consume a small amount of £consumer_goods£ §YConsumer Goods§! to find rich £minerals£ §YMineral§! deposits and packets of £rare_crystals£ §YRare Crystals§! around."
@@ -1223,7 +1224,8 @@ tec_jump_empty:0 "\n\n"
  job_tec_scavenger_drone:0 "Scavenger Drone"
  job_tec_scavenger_drone_plural:0 "Scavenger Drones"
  job_tec_scavenger_drone_desc:0 "These drones have incredibly specific skills to sort, navigate and map nearby locations, tracking and obtaining any valuable resource or material found around."
- job_tec_scavenger_drone_effect_desc:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
+ job_tec_scavenger_drone_effect_desc: "[job_tec_scavenger_drone_effect_desc]"
+ job_tec_scavenger_drone_effect_desc_default:0 "£job_tec_scavenger_drone£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to generate diverse £trigger_tec_basic_resources£ §YBasic Resources§!."
  job_tec_scavenger_drone_effect_desc_dry:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich £energy£ §YEnergy§! deposits and packets of £volatile_motes£ §YVolatile Motes§! around."
  job_tec_scavenger_drone_effect_desc_wet:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich £food£ §YFood§! deposits and packets of £exotic_gases£ §YExotic Gases§! around."
  job_tec_scavenger_drone_effect_desc_cold:0 "£job_tec_scavenger£ $job_tec_scavenger_drone_plural$ use an increased £pop£ §YUpkeep§! to find rich £minerals£ §YMineral§! deposits and packets of £rare_crystals£ §YRare Crystals§! around."
