Branch office capitals and buildings refactor

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -324,8 +324,23 @@
 
  job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [owner.tec_brain_drone_upkeep] into £trigger_tec_research£ §YResearch Points§! for new technologies"
 
- job_spawning_drone_effect_desc:2 "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+ job_spawning_drone_effect_desc:2 "[job_spawning_drone_effect_desc]"
+ job_spawning_drone_effect_default_desc: "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
  job_spawning_drone_necrophage_effect_desc:0 "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
+
+ job_criminal_effect_desc: "£job_criminal£ $job_criminal_plural$ live outside the bounds of legal society, some by choice and some by circumstance."
+ job_deviant_drone_effect_desc: "£job_criminal£ $job_deviant_drone_plural$ no longer obey the Hive Mind."
+ job_corrupt_drone_effect_desc: "£job_criminal£ $job_dcorrupt_drone_plural$ have been corrupted and no longer obey the directives of the core intelligence."
+
+ job_necro_apprentice_effect_desc:2 "[job_necro_apprentice_effect_desc]"
+ job_necro_apprentice_effect_default_desc:2 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £consumer_goods£ §Y$consumer_goods$§! and £food£ §Y$food$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_lithoid_desc:1 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £consumer_goods£ §Y$consumer_goods$§! and £minerals£ §Y$minerals$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_hive_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £food£ §Y$food$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_hive_lithoid_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £minerals£ §Y$minerals$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
+
+ job_bath_attendant_effect_desc: "$job_toxic_baths_effect_desc$"
+ job_bath_attendant_effect_hive_desc: "$job_toxic_baths_effect_hive_desc$"
+ job_bath_attendant_effect_machine_desc: "$job_toxic_baths_effect_machine_desc$"
 
  job_roboticist_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ turn [root.tec_roboticist_upkeep] into new £pop£ §YRobot Pops§!"
 
