--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3391,6 +3391,8 @@ mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_h
 mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
 mod_tec_hired_job_trade_add: "£trade_value£ $TRADE_VALUE$ from £job£ $private_hired$ Jobs"
 
+mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
+
 mod_tec_ruler_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $RULERS$"
 mod_tec_specialist_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $SPECIALISTS$"
 mod_tec_worker_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $WORKERS$"
