Fixed assmebly modifier issues

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1408,6 +1408,9 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_master_cloner_per_pop:0 "§G+1§! £mod_job_tec_cloner_add£ $job_tec_master_cloner$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
 
+job_tec_master_cloner_effect_t2_desc: "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_cloner_effect_t3_desc: "\nAfter the upgrade, £job_tec_cloner£ $job_tec_master_cloner_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+
  job_tec_master_cloner_drone:0 "Master Cloner Drone"
  job_tec_master_cloner_drone_plural:0 "Master Cloner Drones"
  job_tec_master_cloner_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated cloning processes, radically boosting the collective's population."
@@ -1415,6 +1418,46 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_master_cloner_drone_add:0 "$job_tec_master_cloner_drone$ Jobs"
  mod_job_tec_master_cloner_drone_per_pop:0 "§G+1§! £mod_job_tec_cloner_drone_add£ $job_tec_master_cloner_drone$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
+
+
+ job_tec_master_bioengineer:0 "Master Bioengineer"
+ job_tec_master_bioengineer_plural:0 "Master Bioengineers"
+ job_tec_master_bioengineer_desc:0 "Only a few can reach the degree of perfection in bioengineering, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
+ job_tec_master_bioengineer_effect_desc:0 "£job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ convert [root.tec_bioengineer_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ mod_job_tec_master_bioengineer_add:0 "$job_tec_master_bioengineer$ Jobs"
+ mod_job_tec_master_bioengineer_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_add£ $job_tec_master_bioengineer$ Job per $VALUE$ Pops"
+ mod_job_tec_master_bioengineer_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioengineer_add£ per $VALUE$ £pop£"
+
+job_tec_master_bioengineer_effect_t2_desc: "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioengineer£ $job_tec_master_bioengineer_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+
+ job_tec_master_bioengineer_drone:0 "Master Bioengineer Drone"
+ job_tec_master_bioengineer_drone_plural:0 "Master Bioengineer Drones"
+ job_tec_master_bioengineer_drone_desc:0 "This special kind of drone is able to weave and supervise extremely intrincated bioengineering processes, radically boosting the collective's bioengineered population."
+ job_tec_master_bioengineer_drone_effect_desc:0 "£job_tec_bioengineer_drone£ $job_tec_master_bioengineer_drone_plural$ convert [root.tec_bioengineer_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ mod_job_tec_master_bioengineer_drone_add:0 "$job_tec_master_bioengineer_drone$ Jobs"
+ mod_job_tec_master_bioengineer_drone_per_pop:0 "§G+1§! £mod_job_tec_bioengineer_drone_add£ $job_tec_master_bioengineer_drone$ Job per $VALUE$ Pops"
+ mod_job_tec_master_bioengineer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
+
+
+ job_tec_master_roboticist:0 "Master Roboticist"
+ job_tec_master_roboticist_plural:0 "Master Roboticists"
+ job_tec_master_roboticist_desc:0 "Only a few can reach the degree of perfection in artificing and assmebling synthetics or cybernetics that these individuals have achieved, now consecrated to increase the empire workforce, exponentially."
+ job_tec_master_roboticist_effect_desc:0 "£job_tec_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ mod_job_tec_master_roboticist_add:0 "$job_tec_master_roboticist$ Jobs"
+ mod_job_tec_master_roboticist_per_pop:0 "§G+1§! £mod_job_tec_roboticist_add£ $job_tec_master_roboticist$ Job per $VALUE$ Pops"
+ mod_job_tec_master_roboticist_per_pop_short:0 "\n§G+1§! £mod_job_tec_roboticist_add£ per $VALUE$ £pop£"
+
+job_tec_master_roboticist_effect_t2_desc: "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y3§! to §Y4.5§!"
+job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboticist£ $job_tec_master_roboticist_plural$ will have their assembly increased from §Y4.5§! to §Y6§!"
+
+ job_tec_master_replicator_drone:0 "Master Replicator Drone"
+ job_tec_master_replicator_drone_plural:0 "Master Replicator Drones"
+ job_tec_master_replicator_drone_desc:0 "This special kind of drone is able to artifice and create extremely intrincated synthetic machines and cybernetics, radically boosting the collective's synthetic or cybernetic population."
+ job_tec_master_replicator_drone_effect_desc:0 "£job_tec_replicator_drone£ $job_tec_master_replicator_drone_plural$ convert [root.tec_replicator_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ mod_job_tec_master_replicator_drone_add:0 "$job_tec_master_replicator_drone$ Jobs"
+ mod_job_tec_master_replicator_drone_per_pop:0 "§G+1§! £mod_job_tec_replicator_drone_add£ $job_tec_master_replicator_drone$ Job per $VALUE$ Pops"
+ mod_job_tec_master_replicator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_drone_add£ per $VALUE$ £pop£"
 
 # ------------------------------------------------- Bioservants
  building_tec_bioservant_plant_1:0 "Biotailoring Chambers"
@@ -1894,10 +1937,6 @@ tec_jump_empty:0 "\n\n"
  job_tec_master_army:0 "A"
  job_tec_master_army_plural:0 "A"
  job_tec_master_army_desc:0 "A"
-
- job_tec_master_roboticist:0 "A"
- job_tec_master_roboticist_plural:0 "A"
- job_tec_master_roboticist_desc:0 "A"
 
  job_tec_master_shipyard:0 "A"
  job_tec_master_shipyard_plural:0 "A"
