ascension base pull 1

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3173,6 +3173,48 @@ tec_jump_empty:0 "\n\n"
  col_tec_ely_shipyard_desc:1 "An entire world dedicated to the ever-expanding needs of the bureaucracy."
  col_tec_ely_shipyard_custom:1 "£district£ City districts provides §G1§! £mod_country_admin_cap_add£ Administrative Job.\n£mod_country_admin_cap_add£ Administrative Jobs Upkeep reduced by §G10%§!. \n£pop£ Pop Ethics Shift Chance reduced by §G20%§!."
 
+# ------------------------------------------------- Rimworld
+ col_tec_rimworld_regular:0 "Rim World"
+ col_tec_rimworld_regular_desc:1 "A colony far away from the empire capital, this world is conceded to non-state organizations in order to ease its management and cohesion.\nSome try to maintain stability on their own, some take the ''legal'' affairs on their own."
+ #col_tec_rimworld_regular_custom:1 "TO DO"
+
+ col_tec_rimworld_gestalt:0 "Rim World"
+ col_tec_rimworld_gestalt_desc:1 "A colony far away from the gestalt capital, this world is conceded to semi-autonomous high-rank drones in order to ease its management and cohesion.\nWhile it retains a high amoount of stability, it is natural on it to develop higher degrees of deviancy than normal."
+ #col_tec_rimworld_gestalt_custom:1 "TO DO"
+
+# ------------------------------------------------- Coreworld
+ col_tec_coreworld_regular:0 "Core World"
+ col_tec_coreworld_regular_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_regular_custom:1 "TO DO"
+
+ col_tec_coreworld_regular_menial:0 "Production Core World"
+ col_tec_coreworld_regular_menial_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_regular_menial_custom:1 "TO DO"
+
+ col_tec_coreworld_regular_industrial:0 "Industrial Core World"
+ col_tec_coreworld_regular_industrial_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_regular_industrial_custom:1 "TO DO"
+
+ col_tec_coreworld_regular_development:0 "Development Core World"
+ col_tec_coreworld_regular_development_desc:1 "A colony right inside the direct bureaucratic, communication and influence area of the empire capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_regular_development_custom:1 "TO DO"
+
+ col_tec_coreworld_gestalt:0 "Core World"
+ col_tec_coreworld_gestalt_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_gestalt_custom:1 "TO DO"
+
+ col_tec_coreworld_gestalt_menial:0 "Production Core World"
+ col_tec_coreworld_gestalt_menial_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_gestalt_menial_custom:1 "TO DO"
+
+ col_tec_coreworld_gestalt_industrial:0 "Industrial Core World"
+ col_tec_coreworld_gestalt_industrial_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_gestalt_industrial_custom:1 "TO DO"
+
+ col_tec_coreworld_gestalt_development:0 "Development Core World"
+ col_tec_coreworld_gestalt_development_desc:1 "A colony right inside the direct reach and influence area of the gestalt capital.\nBeing so close allows a better coordination and management of resources, allowing a high degree of specialization and production."
+ #col_tec_coreworld_gestalt_development_custom:1 "TO DO"
+
 # ---------------------------------------------------------------
 # MISC/TO ORGANISE STUFF
 # ---------------------------------------------------------------
