Make private buildings upgradable

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -592,8 +592,17 @@ tec_jump_empty:0 "\n\n"
  building_tec_entepre_research:0 "Private Research Labs"
  building_tec_entepre_research_desc:0 "§EEntepreneur Building§!\n\nLicensed to provide the best technological output while also swimming in benefits, a private lab founded these installations with the consent of the empire."
 
+ building_tec_entepre_research_2:0 "Private Research Complexes"
+ building_tec_entepre_research_2_desc:0 "§EEntepreneur Building§!\n\nHaving been founded with the consent of the empire, upgraded private research facilities with a very large staff capacity provide better output than their smaller competitors."
+
+ building_tec_entepre_research_3:0 "Advanced Private Research Complexes"
+ building_tec_entepre_research_3_desc:0 "§EEntepreneur Building§!\n\nHaving been founded with the consent of the empire, these advanced private research facilities have the very latest science equipment along with an extremely large staff capacity, allowing them to maximize both scientific and economic output."
+
  building_tec_entepre_theatres:0 "Private Entertainment System"
  building_tec_entepre_theatres_desc:0 "§EEntepreneur Building§!\n\nWhen it comes to entertain and commodities, this company provides the best possible installations for this planet inhabitants."
+
+ building_tec_entepre_theatres_2:0 "Private Hyper-Entertainment System"
+ building_tec_entepre_theatres_2_desc:0 "§EEntepreneur Building§!\n\nThese massive private entertainment complexes is where private corporations make dreams come true. Shopping malls, restaurants, amusement parks, virtual arcades, and more. Whatever you want, you can buy it here!"
 
 # ------------------------------------------------- Cooperative StateWorkers
  # a
