more changes pre-patch

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -10,8 +10,8 @@
  tr_diplomacy_finish_tooltip:4 "Diplomatic Weight: §G+10%§!\nAvailable Envoys: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
 # ------------------------------------------------- Discovery
- tr_discovery_finish_tooltip:0 "Each time §Y3§! £trigger_tec_research£ Technologies have been researched, the empire has a §Y33%§! chance of gaining a random §GGuaranteed Research§! with §Y33%§! of progress. This effect stacks.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
- tr_discovery_federations_finish_tooltip:0 "Each time §Y3§! £trigger_tec_research£ Technologies have been researched, the empire has a §Y33%§! chance of gaining a random §GGuaranteed Research§! with §Y33%§! of progress. This effect stacks.\nGrants access to the §Y$research_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
+ tr_discovery_finish_tooltip:0 "After researching §Y5§! £trigger_tec_research£ Technologies, the empire has a §Y10%§! chance of gaining a random §GGuaranteed Research§! with §Y25%§! of progress per each subsequent technology researched. This effect stacks and resets after the tech is provided.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
+ tr_discovery_federations_finish_tooltip:0 "After researching §Y5§! £trigger_tec_research£ Technologies, the empire has a §Y10%§! chance of gaining a random §GGuaranteed Research§! with §Y25%§! of progress per each subsequent technology researched. This effect stacks and resets after the tech is provided.\nGrants access to the §Y$research_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
 
  tr_discovery_databank_uplinks:0 "$tech_databank_uplinks$"
  tr_discovery_databank_uplinks_desc:3 "§HUnlocks Edict:§! $edict_research_subsidies$\n§Y$mod_station_researchers_produces_mult$§! increased by §G50%§!.\n§Y$starbase_constructions_research_produces$§! increased by §G20%§!."
@@ -135,7 +135,8 @@
  tr_genetics_enhanced_expression_tooltip:0 "$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!\nCan §YAlter§! Pop §YAppearance§! with Species Modification."
 
  tr_genetics_efficient_cloning:0 "Stem Cell Stimulation"
- tr_genetics_efficient_cloning_tooltip:0 "£job_tec_cloner£ Cloner jobs produce 1 extra £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
+ tr_genetics_efficient_cloning_tooltip:0 "£building£ §YCloning Buildings§! replace their passive biological assembly and jobs with a single §YMaster Cloner§! job, which provide dynamic and additional £mod_pop_growth_speed£ §YOrganic Pop Assembly§! and £society£ §YSociety§! Research based on the building tier, and a moderate amount of £unity£ §YUnity§!."
+ #"£job_tec_cloner£ Cloner jobs produce 1 extra £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
 
  tr_genetics_retrovirus:0 "Retroviral Manipulation"
 
@@ -161,7 +162,8 @@
  tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species £energy£ Energy Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional £energy£ Energy Upkeep."
 
  tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
- tr_cybernetics_assembly_standards_tooltip:0 "Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs.\n\nGain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Assembly bonuses."
+ tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and £engineering£ §YEngineering§! Research based on the building tier, and a moderate amount of £amenities£ §YAmenities§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
+ #Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs.\n\nGain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Assembly bonuses.
 
  tr_cybernetics_assembly_standards_assimilators:0 "Crucible Worlds"
  tr_cybernetics_assembly_standards_assimilators_desc:0 ""
