--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -72,6 +72,11 @@ decision_tec_environment_fix:0 "Environmental Restoration"
  pm_tec_planet_food_party_machine:0 "Syncronic Overcharge"
  pm_tec_planet_food_party_machine_desc:1 "A magnified energy discharge is boosting the performance of machine units in this world."
  
+# Discover wonder
+ decision_tec_undiscovered_wonders:0 "Undiscovered Wonders" 
+ decision_tec_undiscovered_wonders_desc:0 "There is much to see and discover in our worlds, there is much to uncover and learn from our new homes." 
+ decision_tec_undiscovered_wonders_effects:1 "We will discover a positive §Y£blocker£ Deposit§! on this planet." 
+ decision_tec_undiscovered_wonders_effects_short:2 "We will discover a positive §Y£blocker£ Deposit§! on this planet." 
 
 
 # Crime lord gestalt version
@@ -89,6 +94,9 @@ decision_tec_environment_fix:0 "Environmental Restoration"
 # Psionic ascension
  pm_tec_psionic_ascension:0 "Ascension Ritual"
  pm_tec_psionic_ascension_desc:0 "A psionic ascension ritual is being conducted on this planet."
+
+
+
 
 
 
