--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -522,7 +522,7 @@
 
  # aka the lootbox
  tr_tec_invention_3:0 "Uncovering Possibilities"
- tr_tec_invention_3_tooltip:0 "Upon researching a new technology, the empire will randomly gain a 20% of the monthly income of a random £trigger_tec_basic_resources£ §YBasic Resource§!."
+ tr_tec_invention_3_tooltip:0 "Upon researching a new technology, the empire will randomly gain a §G20%§! of the monthly income of a random £trigger_tec_basic_resources£ §YBasic Resource§!."
  tr_tec_invention_3_delayed:0 "What we will find while trying to unveil new knowledge is completely unknown, but its sure new riches lie ahead."
 
  tr_tec_invention_4:0 "Nuclear Geniality"
