--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1403,7 +1403,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_master_cloner:0 "Master Cloner"
  job_tec_master_cloner_plural:0 "Master Cloners"
  job_tec_master_cloner_desc:0 "Only a few can reach the degree of perfection in genetic tailoring, biological weaving and template adjusts these individuals have achieved, now consecrated to increase the empire population, exponentially."
- job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.tec_cloner_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_cloner_effect_desc:0 "£job_tec_cloner£ $job_tec_master_cloner_plural$ convert [root.tec_cloner_upkeep] into scaling £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, £society£ §YSociety Research§! based on the building upgrade, and £unity£ §YUnity§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_cloner_add:0 "$job_tec_master_cloner$ Jobs"
  mod_job_tec_master_cloner_per_pop:0 "§G+1§! £mod_job_tec_cloner_add£ $job_tec_master_cloner$ Job per $VALUE$ Pops"
  mod_job_tec_master_cloner_per_pop_short:0 "\n§G+1§! £mod_job_tec_cloner_add£ per $VALUE$ £pop£"
@@ -1443,7 +1443,7 @@ job_tec_master_bioengineer_effect_t3_desc: "\nAfter the upgrade, £job_tec_bioen
  job_tec_master_roboticist:0 "Master Roboticist"
  job_tec_master_roboticist_plural:0 "Master Roboticists"
  job_tec_master_roboticist_desc:0 "Only a few can reach the degree of perfection in artificing and assmebling synthetics or cybernetics that these individuals have achieved, now consecrated to increase the empire workforce, exponentially."
- job_tec_master_roboticist_effect_desc:0 "£job_tec_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! and £society£ §YSociety Research§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+ job_tec_master_roboticist_effect_desc:0 "£job_tec_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into scaling £job_roboticist£ §YRobot Assembly§! and £engineering£ §YEngineering Research§! based on the building upgrade, and £amenities£ §YAmenities§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
  mod_job_tec_master_roboticist_add:0 "$job_tec_master_roboticist$ Jobs"
  mod_job_tec_master_roboticist_per_pop:0 "§G+1§! £mod_job_tec_roboticist_add£ $job_tec_master_roboticist$ Job per $VALUE$ Pops"
  mod_job_tec_master_roboticist_per_pop_short:0 "\n§G+1§! £mod_job_tec_roboticist_add£ per $VALUE$ £pop£"
