--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -708,9 +708,9 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  tec_trait_cybernetic_submodule_fallback:0 "$MOD_LEADER_AGE$: §G+25 years§!\n"
  tec_trait_cybernetic_submodule_lifespan:0 "$tec_trait_cybernetic_submodule_fallback$"
  tec_trait_cybernetic_submodule_warfare:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
- tec_trait_cybernetic_submodule_survival:0 "$MOD_ARMY_HEALTH$: §G+20%§!\n"
+ tec_trait_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
  tec_trait_cybernetic_submodule_recycling:0 "$mod_planet_pops_upkeep_mult$: §G-10%§!\n"
- tec_trait_cybernetic_submodule_construction:0 "$mod_planet_building_build_speed_mult$ per Pop: §G+1%§!\n"
+ tec_trait_cybernetic_submodule_construction:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1%§!\n"
  tec_trait_cybernetic_submodule_knowledge:0 "$MOD_SPECIES_LEADER_EXP_GAIN$: §G+25%§!\n"
 
  tec_trait_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
