--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -39,7 +39,7 @@
  tr_tec_outreach_1_delayed:0 "We will visit countless new places where we will call home, so our initial efforts must be redoubled and the equipment and amenities of our pathfinders and pioneers completely ensured and reinforced."
 
  tr_tec_outreach_1_gestalt:0 "$tr_tec_outreach_1$"
- tr_tec_outreach_1_gestalt_tooltip:0 "£building£ §Y$building_tec_outreach_platform$§! provide an extra £job_tec_planner_drone£ §YPlanner Drone§! jobs, and a second one after the £building£ Capital Building is §HUpgraded§!.\n£job_tec_planner£ Planner Drones convert £trigger_tec_basic_resources£ Basic Resources into £unity£ Unity and £trigger_tec_basic_resources£ §YExtra Resources§! based on the §HPlanet Type§!."
+ tr_tec_outreach_1_gestalt_tooltip:0 "£building£ §Y$building_tec_outreach_platform$§! provide a £job_tec_planner_drone£ §YPlanner Drone§! jobs, and a second one after the £building£ Capital Building is §HUpgraded§!.\n£job_tec_planner£ Planner Drones convert £trigger_tec_basic_resources£ Basic Resources into £unity£ Unity and £trigger_tec_basic_resources£ §YExtra Resources§! based on the §HPlanet Type§!."
  tr_tec_outreach_1_gestalt_delayed:0 "We will visit countless new places where our collective will grow, so our initial efforts must be redoubled and the equipment and amenities necessary will be redirected and controlled to our planner agents."
  #"The new spaces we create should be done swiftly and be ready to host our population as soon as possible, so moving permanent flotillas to the construction sites will help that process."
 
@@ -52,7 +52,7 @@
  tr_tec_outreach_3_delayed:0 "Infinite potential possibilities also mean infinite potential problems, so all the efforts should be focused on making our new homes as robust and developed in the shortest amount of time."
 
  tr_tec_outreach_4:0 "Atmospheric Sculpting"
- tr_tec_outreach_4_tooltip:0 "Unlocks £building£ §YGeosculptor§! planetary ring buildings.\nGeosculptors increase the planet §Y$tec_loc_terraform_speed$§!, §Y$tec_loc_habitability$§! and £trigger_tec_basic_resources£ Basic Resource districts and production of the planet the ring orbits."
+ tr_tec_outreach_4_tooltip:0 "£building£ §YOrbital Ring§! buildings reduce the planet §YTerraforming Cost§!, increase §Y$tec_loc_habitability$§! and £trigger_tec_basic_resources£ Basic Resource districts and production of the planet."
  tr_tec_outreach_4_delayed:0 "Wherever we want to be settled, will be ours and will be adapted to our needs."
 
 	tr_tec_outreach_final_1:0 "Preprinted Modules"
