--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -404,16 +404,16 @@
  tr_tec_statecraft_adopt_tooltip:7 "£unity£ §YEdict Upkeep§! decreased by §G10%§!."
 
  tr_tec_statecraft_finish:0 "Statecraft Traditions Finished"
- tr_tec_statecraft_finish_tooltip:4 "Additionally, unlocks §YEthic-Based Buildings§!.\n\n§H''Ethic-Based Buildings are planetary or empire unique buildings that provide bonuses and reinforce the identity of the empire.''§!\n"
+ tr_tec_statecraft_finish_tooltip:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
 
  tr_tec_statecraft_finish_autarchy:0 "Autarchy Traditions Finished"
- tr_tec_statecraft_finish_autarchy_tooltip:4 "Additionally, unlocks §YEthic-Based Buildings§!.\n\n§H''Ethic-Based Buildings are planetary or empire unique buildings that provide bonuses and reinforce the identity of the empire.''§!\n"
+ tr_tec_statecraft_finish_autarchy_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
 
  tr_tec_statecraft_finish_hive:0 "Connectivity Traditions Finished"
- tr_tec_statecraft_finish_hive_tooltip:4 "Additionally, unlocks §YEthic-Based Buildings§!.\n\n§H''Ethic-Based Buildings are planetary or empire unique buildings that provide bonuses and reinforce the identity of the empire.''§!\n"
+ tr_tec_statecraft_finish_hive_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
 
  tr_tec_statecraft_finish_machine:0 "Determination Traditions Finished"
- tr_tec_statecraft_finish_machine_tooltip:4 "Additionally, unlocks §YEthic-Based Buildings§!.\n\n§H''Ethic-Based Buildings are planetary or empire unique buildings that provide bonuses and reinforce the identity of the empire.''§!\n"
+ tr_tec_statecraft_finish_machine_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
 
  tr_tec_statecraft_finish_effect:4 ""
  tr_tec_statecraft_finish_autarchy_effect:4 ""
