--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -1522,7 +1522,7 @@
  tradition_tec_cybernetics_A_desc:0 "A."
 
  tr_tec_cybernetics_A_adopt:0 "Perfection Traditions"
- tr_tec_cybernetics_A_adopt_tooltip:0 "$tr_tec_cybernetics_a_adopt_effect$"
+ tr_tec_cybernetics_A_adopt_tooltip:0 ""
 
  tr_tec_cybernetics_A_finish:0 "Perfection Traditions Finished"
  tr_tec_cybernetics_A_finish_tooltip:4 "Ascension Perks Unlocked: §G+1§!\n\nUnlocks special §YAdvanced unique traits§!, natural upgrades of some basic traits.\n"
@@ -1544,7 +1544,7 @@
  tradition_tec_cybernetics_B_desc:0 "A."
 
  tr_tec_cybernetics_B_adopt:0 "Perfection Traditions"
- tr_tec_cybernetics_B_adopt_tooltip:0 "$tr_tec_cybernetics_B_adopt_effect$"
+ tr_tec_cybernetics_B_adopt_tooltip:0 ""
 
  tr_tec_cybernetics_B_finish:0 "Perfection Traditions Finished"
  tr_tec_cybernetics_B_finish_tooltip:4 "Ascension Perks Unlocked: §G+1§!\n\nUnlocks special §YAdvanced unique traits§!, natural upgrades of some basic traits.\n"
