text and small changes

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -16,7 +16,7 @@
  job_gpm_tec_precursor_archaeologist_2:0 "Precursor Archaeologist"
  job_gpm_tec_precursor_archaeologist_2_plural:0 "Precursor Archaeologists"
  job_gpm_tec_precursor_archaeologist_2_desc:0 "Archaeologists specialised in the study of ancient civilizations."
- job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £trigger_tec_research£ §YResearch Points§! and £minor_artifacts£ §YMinor Artifacts§!"
+ job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £trigger_tec_research£ §YResearch§! and £minor_artifacts£ §YMinor Artifacts§!"
 
  job_gpm_tec_precursor_archaeologist_2_drone:0 "Precursor Archaeologist Drone"
  job_gpm_tec_precursor_archaeologist_2_drone_plural:0 "Precursor Archaeologist Drones"
