--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -270,14 +270,131 @@
 
 
 # - - Misc text here - Usually go in other files but in this case better have all located in the same place
-
-# --------------- New civics
-# regular
+# --------------- Origins
+ origin_tec_bioshapers:0 "Biological Shapers"
+ origin_tec_bioshapers_desc:0 "This society has been obsessed with the idea of created life since its earliest days. Although many would have said such a thing could not be done, the first true bio-constructs left the birthing chambers before the idea of spaceflight even crossed their minds."
+ origin_tec_bioshapers_secondary_species:0 "Bioservant Species"
+ origin_tooltip_tec_bioshapers_effects:0 "Start the game with §Y2§! additional £pop£ Pops.\nStart the game with §Y8§! Bio-Construct £pop£ Replacing that many initial pops and with the infrastructure to build more bio-constructs."
+ START_SCREEN_TEC_BIOSHAPERS:0 "The different cultures of [GetHomeWorldName] soon realized that genetic manipulation was a way to improve their life, from selecting fruits to cattle, from creating strands to surviving pandemics and pest, or using them to their benefit.\nThat obsession with genetic perfection derived in a colossal science effort to apply that knowledge to science, to be able to create life, a perfect and servile life to serve their purpose.\nAfter centuries of development, they did it, crafting a new being from a native specie, a new obedient servant they could tailor from even before its existence, building it block from block, cell from cell.\n\nAs they bended and controlled our very life blocks, they will shape the universe with their might."
+ 
+# --------------- Regular civics
  civic_tec_spiritualist_eras:0 "Eras of Contemplation"
  civic_tec_spiritualist_eras_desc:0 "This empire reinforces its faith with the unrelenting pass of time as a way of manifesting the divine, dedicating entire generations to a different cycle of the same pure creed."
  civic_tooltip_tec_spiritualist_eras_effects:0 "This empire, depending on its governing ethics, will periodically change between different cycling ''Eras'' of cult, gaining diverse bonuses and penalties:\n\n- §HEra of Wills:§! (to do).\n- §HEra of Demise:§! (to do).\n- §HEra of Grief:§! (to do).\n- §HEra of Cultivation:§! (to do).\n\n"
 
-# ai
+ civic_tec_paperwork_cult:0 "Bureaucratic Monasticism"
+ civic_tec_paperwork_cult_desc:0 "Paperwork, signatures, taxes, requests... all are manifestations of the divine for this society, with bureaucracy and faith mutually ingrained together; any petition or prayer must be properly corresponded with a signed in triplicate instance."
+ civic_tec_paperwork_cult_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_high_paperwork_priest£ §Y$job_tec_high_paperwork_priest$§!.\n- $job_tec_high_paperwork_priest_effect_desc$\n£building£ Temples and Administrative Offices are replaced by £building£ §YBureaucratic Monasteries§!, providing £job_tec_paperwork_priest£ §Y$job_tec_paperwork_priest_plural$§!.\n$job_tec_paperwork_priest_effect_desc$\n"
+
+ civic_tec_corporate_paperwork_cult:0 "$civic_tec_paperwork_cult$"
+ civic_tec_corporate_paperwork_cult_desc:0 "$civic_tec_paperwork_cult_desc$"
+ civic_tec_corporate_paperwork_cult_tooltip:0 "TO DO"
+
+ civic_tec_starseeker_cult:0 "TO DO"
+ civic_tec_starseeker_cult_desc:0 "TO DO"
+ civic_tec_starseeker_cult_tooltip:0 "TO DO"
+
+ civic_tec_corporate_starseeker_cult:0 "TO DO"
+ civic_tec_corporate_starseeker_cult_desc:0 "TO DO"
+ civic_tec_corporate_starseeker_cult_tooltip:0 "TO DO"
+
+ civic_tec_atom_cult:0 "Atomic Brotherhood"
+ civic_tec_atom_cult_desc:0 "TO DO"
+ civic_tec_atom_cult_tooltip:0 "TO DO"
+
+ civic_tec_corporate_atom_cult:0 "TO DO"
+ civic_tec_corporate_atom_cult_desc:0 "TO DO"
+ civic_tec_corporate_atom_cult_tooltip:0 "TO DO"
+
+ civic_tec_cycle_cult:0 "TO DO"
+ civic_tec_cycle_cult_desc:0 "TO DO"
+ civic_tec_cycle_cult_tooltip:0 "TO DO"
+
+ civic_tec_corporate_cycle_cult:0 "TO DO"
+ civic_tec_corporate_cycle_cult_desc:0 "TO DO"
+ civic_tec_corporate_cycle_cult_tooltip:0 "TO DO"
+
+ civic_tec_wealth_cult:0 "TO DO"
+ civic_tec_wealth_cult_desc:0 "TO DO"
+ civic_tec_wealth_cult_tooltip:0 "TO DO"
+
+ civic_tec_corporate_wealth_cult:0 "TO DO"
+ civic_tec_corporate_wealth_cult_desc:0 "TO DO"
+ civic_tec_corporate_wealth_cult_tooltip:0 "TO DO"
+
+ civic_tec_paranormal_cult:0 "TO DO"
+ civic_tec_paranormal_cult_desc:0 "TO DO"
+ civic_tec_paranormal_cult_tooltip:0 "TO DO"
+
+ civic_tec_corporate_paranormal_cult:0 "TO DO"
+ civic_tec_corporate_paranormal_cult_desc:0 "TO DO"
+ civic_tec_corporate_paranormal_cult_tooltip:0 "TO DO"
+
+ civic_tec_butlerian_cult:0 "Mentat Order"
+ civic_tec_butlerian_cult_desc:0 "An early exposure to the dangers of excessive automation and potential synthetic uprising caused this society to ban the use of Artificial Intelligences and Synthetic Sapient technologies. As a byproduct of it, the need of administrative and research development was relegated to highly intelligent and minute living computers, with immense mathematical, logical, cognitive and ''supralogical'' skills, selected and trained even before birth."
+ civic_tec_butlerian_cult_tooltip:0 "£building£ Administrative and Research Buildings are replaced by £building£ §YMentat Emplacements§!, providing £job_tec_mentat£ §Y$job_tec_mentat_plural$§!.\n$job_tec_mentat_effect_desc_regular$\n§RRobotic, Synthetic and AI features are BANNED for this empire§!\n"
+
+ civic_tec_corporate_butlerian_cult:0 "Mentat Firm"
+ civic_tec_corporate_butlerian_cult_desc:0 "An early exposition to the dangers of excessive automation and potential synthetic uprising caused this megacorporation to ban the use of Artificial Intelligences and Synthetic Sapient technologies. As a byproduct of it, the need of trading, administrative and research development was relegated to highly intelligent and minute living computers, with immense mathematical, logical, cognitive and ''supralogical'' skills, selected and trained even before birth."
+ civic_tec_corporate_butlerian_cult_tooltip:0 "£building£ Administrative and Research Buildings are replaced by £building£ §YMentat Emplacements§!, providing £job_tec_mentat£ §Y$job_tec_mentat_plural$§!.\n$job_tec_mentat_effect_desc_corporate$\n§RRobotic, Synthetic and AI features are BANNED for this empire§!\n"
+
+ civic_tec_machine_composers:0 "TO DO"
+ civic_tec_machine_composers_desc:0 "TO DO"
+ civic_tec_machine_composers_desc:0 "TO DO"
+
+
+# TO DO
+ civic_tec_corporate_historians:0 "TO DO"
+ civic_tec_corporate_historians_desc:0 "TO DO"
+
+ civic_tec_corporate_technomancer:0 "TO DO"
+ civic_tec_corporate_technomancer_desc:0 "TO DO"
+
+ civic_tec_corporate_starseekers:0 "TO DO"
+ civic_tec_corporate_starseekers_desc:0 "TO DO"
+
+ civic_tec_psi_researchers:0 "TO DO"
+ civic_tec_psi_researchers_desc:0 "TO DO"
+	# Note: Focus on physics
+ civic_tec_corporate_psi_researchers:0 "TO DO"
+ civic_tec_corporate_psi_researchers_desc:0 "TO DO"
+
+ civic_tec_bio_researchers:0 "TO DO"
+ civic_tec_bio_researchers_desc:0 "TO DO"
+
+	# Note: Focus on bio
+ civic_tec_corporate_bio_researchers:0 "TO DO"
+ civic_tec_corporate_bio_researchers_desc:0 "TO DO"
+
+ civic_tec_mecha_researchers:0 "TO DO"
+ civic_tec_mecha_researchers_desc:0 "TO DO"
+
+	# Note: Focus on engineering
+ civic_tec_corporate_mecha_researchers:0 "TO DO"
+ civic_tec_corporate_mecha_researchers_desc:0 "TO DO"
+
+ civic_tec_corporate_diversifier:0 "TO DO"
+ civic_tec_corporate_diversifier_desc:0 "TO DO"
+
+ civic_tec_corporate_astrologers:0 "TO DO"
+ civic_tec_corporate_astrologers_desc:0 "TO DO"
+
+ civic_tec_singularity_researchers:0 "TO DO"
+ civic_tec_singularity_researchers_desc:0 "TO DO"
+
+	# Note: Automated research
+ civic_tec_corporate_singularity_researchers:0 "TO DO"
+ civic_tec_corporate_singularity_researchers_desc:0 "TO DO"
+
+ civic_tec_eldritch_researchers:0 "TO DO"
+ civic_tec_eldritch_researchers_desc:0 "TO DO"
+
+	# Note: can perform eldritch experiments each 10 years
+ civic_tec_corporate_eldritch_researchers:0 "TO DO"
+ civic_tec_corporate_eldritch_researchers_desc:0 "TO DO"
+
+
+# --------------- AI civics
  civic_tec_ai_meca:0 "Mec-A Operatives"
  civic_tec_ai_meca_desc:0 "To do - Mechanical Exo-Force remote-Controlled Army"
  civic_tooltip_tec_ai_meca_effects:0 "Replace fortress with Mech Relays\nCan recruit Mec-A armies, which are.\n\nAI Authority Empires: Mech Tele-Operators also provide extra AI capacity.\n\n"
@@ -294,7 +411,7 @@
  civic_tec_ai_cult_desc:0 "To do"
  civic_tooltip_tec_ai_cult_effects:0 "TO DO.\nAfter the empire obtains the robotic workers technology, Divination Cores wil provide 0r4cle jobs, enhanced administrators (or priests) which also provide processing capacity, but are only available to cybernetic units of any type for employment.\n\nAI Authority Empires: 0r4cles also provide extra AI capacity.\n\n"
 
-# hive
+# --------------- Hive
  civic_tec_hive_mycus_cultivators:0 "Mycetal Cultivators"
  civic_tec_hive_mycus_cultivators_desc:0 "To do"
  civic_tooltip_tec_hive_mycus_cultivators_effects:0 "Allows the construction of Nascent Megamycete buildings, which will grow automatically over time providing the planet special bonuses with each stage, like menial district slots.\nPlanets with a Developed Megamycete will be able to build Mycus Growths, Amalgam and Network buildings, which are alternative semi-automated versions of existing buildings, and will be improved by further Megamycete stages.\n\n"
@@ -314,6 +431,8 @@
  civic_tec_hive_cyberclusters:0 "Network Clusters"
  civic_tec_hive_cyberclusters_desc:0 "TO DO"
  civic_tooltip_tec_hive_cyberclusters_effects:0 "TO DO"
+
+
 
 # .............. sort
  building_tec_old_machine_capital:0 "A"
@@ -370,6 +489,15 @@
  building_tec_mechadendrite_assembler_3_desc:0 "These towering automated installations print any kind of biological or cybernetic body at a unprecedented fast rate, using raw components to generate micro-structures developed into further living and perfected materials and beings."
 
  building_tec_mechadendrite_assembler_effect:0 "This £building£ automatically assembles both £job_roboticist£ Synthetic or £tec_genepoints£ Organic pops"
+
+# ------------------------------------------------- Outreach
+ building_tec_outreach_assistant:0 "Global Assist Platform"
+ building_tec_outreach_assistant_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
+ building_tec_outreach_assistant_effect:0 "This £building£ increases £job_roboticist£ Planet Build Speed by §Y20%§! up to §Y100%§! and reduces £job_roboticist£ Planet Construction Costs by §Y-5%§! up to §Y-25%§! based on the number of Construction Ships docked at the planet\n§HThe maximum effect is reached with 5 ships docked§!"
+
+ building_tec_outreach_autofabricator:0 "Autofabricators"
+ building_tec_outreach_autofabricator_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
+ building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genepoints£ Organic pops"
 
 # ------------------------------------------------- SR uses - Nanites
  building_tec_nanite_spawner_1:0 "Nano-Germinator"
@@ -462,11 +590,11 @@
 		#	tec_is_paranormal_cult = yes
 
 # Paperwork cult
- building_tec_paperwork_temple_1:0 "Bureaucratic Temple"
+ building_tec_paperwork_temple_1:0 "Bureaucratic Monastery"
  building_tec_paperwork_temple_1_desc:0 "A tumultuous place of both cult and bureaucracy where administrative priests transcribe, redact and worship sacred paperwork."
- building_tec_paperwork_temple_2:0 "Bureaucratic Monastery"
+ building_tec_paperwork_temple_2:0 "Bureaucratic Abbey"
  building_tec_paperwork_temple_2_desc:0 "A tumultuous and gargantuan place of both cult and bureaucracy where administrative priests transcribe, redact and worship sacred paperwork."
- building_tec_paperwork_temple_3:0 "Bureaucratic Priory"
+ building_tec_paperwork_temple_3:0 "Bureaucratic High Priory"
  building_tec_paperwork_temple_3_desc:0 "A tumultuous and labyrinthian place of both cult and bureaucracy where administrative priests transcribe, redact and worship sacred paperwork. It is rumoured you need to really pray in order to get a bureaucratic process filled, after filling several dozens of documents and administrative lectures."
 
  job_tec_high_paperwork_priest:0 "Bureau-Dean"
@@ -576,6 +704,26 @@
  mod_job_tec_wealth_priest_add:0 "$job_tec_wealth_priest$ Jobs"
  mod_job_tec_wealth_priest_per_pop:0 "§G+1§! $job_tec_wealth_priest$ Job per $VALUE$ Pops"
  mod_job_tec_wealth_priest_per_pop_short:0 "\n§G+1§! £mod_job_tec_wealth_priest_add£ per $VALUE$ £pop£"
+# /
+
+# Butlerian cult
+ building_tec_butlerian_1:0 "Mentat Emplacements"
+ building_tec_butlerian_1_desc:0 "to do"
+ building_tec_butlerian_2:0 "Mentat Campus"
+ building_tec_butlerian_2_desc:0 "to do"
+ building_tec_butlerian_3:0 "Mentat Sanctuary"
+ building_tec_butlerian_3_desc:0 "to do"
+
+ job_tec_mentat:0 "Mentat"
+ job_tec_mentat_plural:0 "Mentats"
+ job_tec_mentat_desc:0 "Calculators, mathematicians, bureaucrats and overall data-brokers, mentats are living computers that surpass the expectations and limits of organic minds."
+ job_tec_mentat_effect_desc_regular:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ job_tec_mentat_effect_desc_corporate:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§!."
+ job_tec_mentat_effect_desc:0 "£job_tec_mentat£ $job_tec_mentat_plural$ convert £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £trigger_tec_research£ §YResearch§! and £mod_edict_cap_add£ §YEdict Funds§!."
+ #", and reduce §Y$mod_planet_pops_robotics_upkeep_mult$§!."
+ mod_job_tec_mentat_add:0 "$job_tec_mentat$ Jobs"
+ mod_job_tec_mentat_per_pop:0 "§G+1§! $job_tec_mentat$ Job per $VALUE$ Pops"
+ mod_job_tec_mentat_per_pop_short:0 "\n§G+1§! £mod_job_tec_mentat_add£ per $VALUE$ £pop£"
 # /
 
 # ------------------------------------------------- TRAITS
